# wasm-plugin

./: Cargo.lock.script  Cargo.toml  Cargo.toml.script  README.md  script.rs
script_api/: Cargo.toml
script_api/src/: data.rs  debug.rs  error.rs  lib.rs  panic.rs  script_action.rs
wasm_runner/: Cargo.toml
wasm_runner/src/: compiler.rs  lib.rs  limitation_injector.rs  main.rs  wasm_vm.rs
wasm_script_skeleton/: Cargo.toml
wasm_script_skeleton/src/: lib.rs  script.rs
