[package]
name = "wasm_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wasm_runner"
path = "src/lib.rs"

[[bin]]
name = "wasm_runner"
path = "src/main.rs"

[dependencies]
wasmer = "4.2.2"
walrus = { version = "0.19.0", git = "https://github.com/scrtlabs/walrus", rev = "c5777d4" }
script_api = { path = "../script_api" }
bincode = "1.3.3"
thiserror = "1.0"
tempdir = "0.3.7"